#*******************************************************************************
#  Copyright (c) 2016
# 
#  All rights reserved. This program and the accompanying materials
#  are made available under the terms of the Eclipse Public License v1.0
#  and Eclipse Distribution License v1.0 which accompany this distribution. 
# 
#  The Eclipse Public License is available at 
#     http://www.eclipse.org/legal/epl-v10.html
#  and the Eclipse Distribution License is available at 
#    http://www.eclipse.org/org/documents/edl-v10.php.
# 
#  Contributors:
#     Guilherme Maciel Ferreira - initial contribuition
#*******************************************************************************/

###############################################################################
# Headers to install
###############################################################################

include_HEADERS  = async_client.h
include_HEADERS += callback.h
include_HEADERS += client.h
include_HEADERS += connect_options.h
include_HEADERS += delivery_token.h
include_HEADERS += exception.h
include_HEADERS += iaction_listener.h
include_HEADERS += iclient_persistence.h
include_HEADERS += ipersistable.h
include_HEADERS += message.h
include_HEADERS += token.h
include_HEADERS += topic.h
